--- a/index.html
+++ b/index.html
@@ -559,10 +559,10 @@
     </div>
     <div id="rapContainer">
         <div class="raps" id="rapSix">
-            <p>'Lorem ipsum dolor, sit amet consectetur adipisicing elit. Tempora praesentium similique minima, voluptatem quia quis deserunt nihil esse ullam, eaque tempore eos commodi. Explicabo, sint?...'</p>
+            <p>nechtěl jsem jen zazáplatovat pár děr a spustit plachetku na vodu co nejdřív, "abychom si užili, než se rozpadne". avšak zevrubná oprava znamenala dlouhou, osamělou cestu...</p>
         </div> 
         <div class="raps" id="rapSeven" >
-            <p>'Lorem ipsum dolor, sit amet consectetur adipisicing elit. Tempora praesentium similique minima, voluptatem quia quis deserunt nihil esse ullam, eaque tempore eos commodi. Explicabo, sint?...'</p>  
+            <p>loď se pomalu přeměňovala z vraku do krásného tvaru, který kdysi měla. výsledek je trochu neohrabaný a nepřesný. možná proto, že nejsem doopravdy stavitel lodí. zatím.</p>  
         </div>
     </div>
     
