after it's published

--- a/index.html
+++ b/index.html
@@ -678,7 +678,7 @@
         </div></a>
         </div>
         
-        <div id="construction"><a href="../leafindustrySpace/index.html">www.leafindustry.space</a></div>
+        <div id="construction"><a href="https://www.leafindustry.space">www.leafindustry.space</a></div>
     </div>        
 </footer>
 </div>
